 * @shutdown/reboot would cause hang unencrypted sockets for players with
   both SSL and normal connections. Reported by Padraic. [SW]
 * @chatformat sometimes received the player's name without accents by
   mistake. Reported by Sketch. [MG]

Functions:
 * Restrictions for the beep() function can now be modified with @function.
   Suggested by Paige. [MG]

Version 1.8.4 patchlevel 4                                 May 05,  2011

Major changes:
 * Q-registers are no longer limited to single characters. setq(name,joe)
   and r(name) or %q<name>! Limited by max_named_qregs. [GM]
 * Ident lookup and associated config options have been removed. Between
   lack of people running ident servers, NAT, and issues in the code, it
   rarely got results. [SW].

Hardcode:
 * global_eval_context has been removed. The BQUE, EVAL_CONTEXT and PE_Info
   structs have been removed, replaced with MQUE and NEW_PE_INFO. Shouldn't
   affect players, but will affect hardcode hacks. See HACKING.184 for more
   info. [MG]
 * Q-registers are now kept in a PE_REGS stack. See HACKING.184 for more
   information. This will be used for other registers. [GM]
 * Regexp information ($1, $<foo>) are now kept in the PE_REGS stack. [GM]
 * Faster regexps in many cases when there is no markup. [GM]
 * Switch, iter, and env (%0-%9) information are now kept in PE_REGS stack.
   switch, iter, @switch and @dol are no longer limited, but new queue
   entries only keep the last 50 @switch/@dols. [GM]
 * Renamed some variables in COMMAND() definitions for consistency/clarity.
   See HACKING.184 for more info. [MG]
 * Assorted Windows fixes. [SW]
 * Clean up code using vsnprintf() to remove #ifdefs. [SW]
 * String trees are now fully reference counted with no undeletable
   entries. [SW]

Minor changes:
 * Because switch() and @switch now store capture data, it can change
   the nesting of $0-$9/$<foo> in rare cases. [GM]
 * All @o* messages are now heard by rooms even when they're empty. Makes