@@ -61,6 +61,9 @@ Fixes:
 Functions:
  * Restrictions for the beep() function can now be modified with @function.
    Suggested by Paige. [MG]
+ * Functions that take #lambda anonymous attributes also understand a new
+   #apply/<function name> shorthand for calling a single function with one
+   argument. [SW]
 
 Version 1.8.4 patchlevel 4                                 May 05,  2011
 
